--- a/public/422.html
+++ b/public/422.html
@@ -3,56 +3,78 @@
 <head>
   <title>The change you wanted was rejected (422)</title>
   <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-  }
+    body {
+      background-color: #F4F4F4;
+      color: #2E2F30;
+      text-align: center;
+      font-size: 1em;
+      font-family: 'Open Sans', sans-serif;
+    }
 
-  div.dialog {
-    width: 25em;
-    margin: 4em auto 0 auto;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 4em 0 4em;
-  }
+    .wrapper {
+      position: fixed;
+      width: 100%;
+      top: 0px;
+      background-color: #333;
+      height: 40px;
+      text-align: left;
+      z-index: 99999;
+      padding: 1em;
+    }
 
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+    div.dialog {
+      width: 33em;
+      margin: 6em auto 0 auto;
+    }
 
-  body > p {
-    width: 33em;
-    margin: 0 auto 1em;
-    padding: 1em 0;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow:0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    .d_title
+    {
+      background-color: #5c5b82;
+      color: white;
+      border-top-left-radius: 7px;
+      border-top-right-radius: 7px;
+      border-top: 1px solid #CCC;
+      border-left: 1px solid #CCC;
+      border-right: 1px solid #CCC;
+      font-size: 1.1em;
+      font-weight: bold;
+      text-align: left;
+      padding: 5px 15px;
+      margin: 0;
+      box-shadow:0 3px 8px rgba(50, 50, 50, 0.17);
+    }
+
+    .d_body
+    {
+      background-color: white;
+      border: 1px solid #CCC;
+      color: black;
+      text-align: left;
+      border-bottom-left-radius: 7px;
+      border-bottom-right-radius: 7px;
+      padding: 30px;
+      margin: 0;
+      box-shadow:0 3px 8px rgba(50, 50, 50, 0.17);
+    }
+
   </style>
 </head>
 
 <body>
+  <div class="wrapper">
+    <div class="logo">
+      <a href="/"><img src="/assets/cdx-logo.png" alt="Cdx logo"></a>
+    </div>
+  </div>
+
   <!-- This file lives in public/422.html -->
   <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
-    <p>Maybe you tried to change something you didn't have access to.</p>
+    <h1 class="d_title">The change you wanted was rejected.</h1>
+    <div class="d_body">
+      <p>Maybe you tried to change something you didn't have access to.</p>
+      <p>&nbsp;</p>
+      <p>If you are the application owner check the logs for more information.</p>
+    </div>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
 </body>
 </html>
