Fixes missing logo on static pages

--- a/public/422.html
+++ b/public/422.html
@@ -63,7 +63,7 @@
 <body>
   <div class="wrapper">
     <div class="logo">
-      <a href="/"><img src="/assets/cdx-logo.png" alt="Cdx logo"></a>
+      <a href="/"><img src="./assets/images/cdx-logo.png" alt="Cdx logo"></a>
     </div>
   </div>
 
